--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 twitter_username: AFUP_Nantes
 meetup_url: "https://www.meetup.com/fr-FR/afup-nantes-php/"
 
+home_featured_articles_count: 1
 
 # Build settings
 markdown: kramdown
