#1274 Upgrade to Google Analytics 4

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ meetup_url: "https://www.meetup.com/fr-FR/afup-nantes-php/"
 
 permalink: /posts/:title
 
-ga_ua: "UA-33922307-1"
+ga_ua: "G-V8VWN2N1V8"
 home_featured_articles_count: 1
 
 # Build settings
